add pickup page css

--- a/.pickup.md
+++ b/.pickup.md
@@ -8,11 +8,14 @@ UAB CSSA为广大新生提供接机服务，请填写下表联系我们。
 
 
 
-<form id="formaction" method="POST">
+    <form id="formaction" method="POST">
     姓名（必填）: <input type="text" name="name"><br />
+    <span class="help-block">必填</span>  
     邮箱（必填）: <input type="email" name="email"><br />
-    内容（必填）：<input type="text" name="content"><br />
-    <div markdown="0"><a href="#" class="btn btn-info"> <input type="submit" value="发送"></a></div>
+    <span class="help-block">必填</span>  
+    内容（必填）: <input type="text" name="content"><br />
+    <input type="hidden" name="_subject" value="请求接机！" />
+    <button type="submit" class="btn btn-info">发送！</button>
     <input type="hidden" name="_next" value="//uabcssa.github.io/pickup/" />
     <input type="hidden" name="_format" value="plain" />
     <input type="hidden" name="_language" value="zh-CN" />
@@ -21,5 +24,4 @@ UAB CSSA为广大新生提供接机服务，请填写下表联系我们。
     var contactform =  document.getElementById('formaction');
     contactform.setAttribute('action', '//formspree.io/' + 'yulj2010' + '@' + 'gmail' + '.' + 'com');
 </script>
-
 
